@@ -1,42 +1,34 @@
 package com.example.gymcrm.domain;
 
-import jakarta.persistence.CascadeType;
-import jakarta.persistence.Column;
-import jakarta.persistence.Entity;
-import jakarta.persistence.FetchType;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
-import jakarta.persistence.JoinColumn;
-import jakarta.persistence.JoinTable;
-import jakarta.persistence.ManyToMany;
-import jakarta.persistence.OneToMany;
-import jakarta.persistence.OneToOne;
-import jakarta.persistence.Table;
+import jakarta.persistence.*;
+import lombok.AccessLevel;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 
 @Entity
 @Table(name = "trainees")
+@NoArgsConstructor(access = AccessLevel.PROTECTED)
 public class Trainee {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Getter
     private Long id;
 
-    @Column(name = "date_of_birth")
+    @Getter
     private LocalDate dateOfBirth;
 
-    @Column(name = "address")
+    @Getter
     private String address;
 
-    @OneToOne(optional = false, cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.EAGER)
-    @JoinColumn(name = "user_id", nullable = false, unique = true)
+    @OneToOne(optional = false, cascade = CascadeType.ALL, orphanRemoval = true)
+    @JoinColumn(nullable = false, unique = true)
     private User user;
 
     @ManyToMany
@@ -45,11 +37,8 @@ public class Trainee {
             inverseJoinColumns = @JoinColumn(name = "trainer_id"))
     private Set<Trainer> trainers = new LinkedHashSet<>();
 
-    @OneToMany(mappedBy = "trainee", cascade = CascadeType.REMOVE, orphanRemoval = true)
+    @OneToMany(mappedBy = "trainee", cascade = CascadeType.REMOVE)
     private List<Training> trainings = new ArrayList<>();
-
-    protected Trainee() {
-    }
 
     public Trainee(User user, LocalDate dateOfBirth, String address) {
         this.user = user;
@@ -57,49 +46,12 @@ public class Trainee {
         this.address = address;
     }
 
-    public Long getId() {
-        return id;
-    }
-
-    public Long getUserId() {
-        return user.getId();
-    }
-
-    public String getFirstName() {
-        return user.getFirstName();
-    }
-
-    public String getLastName() {
-        return user.getLastName();
-    }
-
-    public String getUsername() {
-        return user.getUsername();
-    }
-
-    public String getPassword() {
-        return user.getPassword();
-    }
-
-    public boolean isActive() {
-        return user.isActive();
-    }
-
-    public LocalDate getDateOfBirth() {
-        return dateOfBirth;
-    }
-
-    public String getAddress() {
-        return address;
-    }
-
-    public Set<Trainer> getTrainers() {
-        return Collections.unmodifiableSet(trainers);
-    }
-
-    public List<Training> getTrainings() {
-        return Collections.unmodifiableList(trainings);
-    }
+    public String getFirstName() { return user.getFirstName(); }
+    public String getLastName() { return user.getLastName(); }
+    public String getUsername() { return user.getUsername(); }
+    public String getPassword() { return user.getPassword(); }
+    public boolean isActive() { return user.isActive(); }
+    public Set<Trainer> getTrainers() { return Set.copyOf(trainers); }
 
     public void updateProfile(String firstName, String lastName, LocalDate dateOfBirth, String address, boolean active) {
         user.setFirstName(firstName);
@@ -111,7 +63,7 @@ public class Trainee {
 
     public void assignTrainer(Trainer trainer) {
         if (trainers.add(trainer)) {
-            trainer.getTraineesInternal().add(this);
+            trainer.addTrainee(this);
         }
     }
 
@@ -121,18 +73,7 @@ public class Trainee {
     }
 
     public void clearTrainers() {
-        for (Trainer trainer : new ArrayList<>(trainers)) {
-            trainer.getTraineesInternal().remove(this);
-        }
+        trainers.forEach(trainer -> trainer.removeTrainee(this));
         trainers.clear();
-    }
-
-    Set<Trainer> getTrainersInternal() {
-        return trainers;
-    }
-
-    @Override
-    public String toString() {
-        return "Trainee{id=" + id + ", username='" + getUsername() + "', active=" + isActive() + '}';
     }
 }
